agregando declaracion de arreglos a([1][2]);

--- a/Proyecto_Compiladores/nbproject/private/private.properties
+++ b/Proyecto_Compiladores/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 compile.on.save=true
-file.reference.java-cup-11a.jar=D:\\Documents\\compi\\Proyecto\\compiladoresI\\Proyecto_Compiladores\\java-cup-11a.jar
-file.reference.java_cup.jar=D:\\Documents\\compi\\Proyecto\\compiladoresI\\Proyecto_Compiladores\\java_cup.jar
-file.reference.JFlex.jar=D:\\Documents\\compi\\Proyecto\\compiladoresI\\Proyecto_Compiladores\\JFlex.jar
-user.properties.file=C:\\Users\\andre\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.java-cup-11a.jar=C:\\Users\\jordi\\Desktop\\compiladoresI-master\\compiladoresI\\Proyecto_Compiladores\\java-cup-11a.jar
+file.reference.java_cup.jar=C:\\Users\\jordi\\Desktop\\compiladoresI-master\\compiladoresI\\Proyecto_Compiladores\\java_cup.jar
+file.reference.JFlex.jar=C:\\Users\\jordi\\Desktop\\compiladoresI-master\\compiladoresI\\Proyecto_Compiladores\\JFlex.jar
+user.properties.file=C:\\Users\\jordi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
